2011-01-13  Chris Kühl  <chrisk@openismus.com>

	Wrapped clutter_bin_layout_get_alignment.

	* clutter/src/bin-layout.hg: Wrapped clutter_bin_layout_get_alignment.
	* codegen/m4/convert_clutter.m4 Added conversion for ClutterBinAlignment.

2011-01-13  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBinLayout.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/bin-layout.[hg|ccg]: Initial wrapping of ClutterBinLayout.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for BinAlignment.

2011-01-12  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterFixedLayout class.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* clutter/src/fixed-layout.[hg|ccg]: Initial wrapping for
	ClutterFixedLayout.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.

2011-01-12  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBox class.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* clutter/src/box.[hg|ccg]: Initial wrapping for ClutterBox.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.

2011-01-10  Murray Cumming  <murrayc@murrayc.com>

	LayoutMeta: Make the constructor explicit.

	* clutter/src/layoutmeta.hg: Use the explicit keyword on the constructor,
	as we do elsewhere in *mm projects.

2011-01-10  Murray Cumming  <murrayc@murrayc.com>

	LayoutManager: Wrap the vfuncs.

	* clutter/src/clutter_vfuncs.defs: Fix a typo.