@@ -118,6 +118,7 @@ _CONV_ENUM(Clutter,ActorFlags)
 _CONV_ENUM(Clutter,AllocationFlags)
 _CONV_ENUM(Clutter,AnimationMode)
 _CONV_ENUM(Clutter,BinAlignment)
+_CONV_ENUM(Clutter,BoxAlignment)
 _CONV_ENUM(Clutter,LayoutFlags)
 _CONV_ENUM(Clutter,PackType)
 _CONV_ENUM(Clutter,PickMode)
@@ -134,6 +135,8 @@ _CONV_ENUM(Pango,WrapMode)
 
 _CONVERSION(`guint32', `ActorFlags', `static_cast<ActorFlags>($3)')
 _CONVERSION(`const gchar*', `const Glib::ustring&',__GCHARP_TO_USTRING)
+
 _CONVERSION(`BinAlignment&',`ClutterBinAlignment*',`(($2) &($3))')
+_CONVERSION(`BoxAlignment&',`ClutterBoxAlignment*',`(($2) &($3))')
 
 _CONVERSION(`PangoContext*',`Glib::RefPtr<const Pango::Context>',Glib::wrap($3))
